IRC logs for #zodb
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1362 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <h1>Zope 3 related odds and ends</h1>
 
   <p><a href="irclogs-zope/">IRC logs of #zope on FreeNode</a></p>
+  <p><a href="irclogs-zodb/">IRC logs of #zodb on FreeNode</a></p>
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
   <p><a href="trac/">Source repository browser of svn.zope.org</a> (updated every 5 minutes)</p>
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
