Clarify the ? marks in version support columns.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1368 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -141,7 +141,7 @@
                 } else if ($.inArray(v, pkg.supports) != -1) {
                     row.append('<td class="supported">+</td>');
                 } else if ($.inArray(v.split('.')[0], pkg.supports) != -1) {
-                    row.append('<td class="probably">?</td>');
+                    row.append('<td class="probably" title="supports Python ' + v.split('.')[0] + ', minor versions not listed">?</td>');
                 } else {
                     row.append('<td class="unsupported">-</td>');
                 }
