--- a/py3/index.html
+++ b/py3/index.html
@@ -17,11 +17,12 @@
     td.unreleased      { color: #eee; }
 
     /* vcs column */
-    td.vcs > a:link    { text-align: center; padding-left: 0.5em; padding-right: 0.5em; }
-    td.vcs > a:link    { color: white; text-decoration: none; display: block; }
+    td.vcs             { padding: 0; white-space: nowrap; text-align: center; }
+    td.vcs > a:link    { text-align: center; padding-left: 0.5em; padding-right: 0.5em; padding-top: 2px; padding-bottom: 2px; }
+    td.vcs > a:link    { color: white; text-decoration: none; display: inline-block; }
     td.vcs > a:visited { color: #eee; }
-    td.git             { background: #da4; }
-    td.svn             { background: #c44; }
+    a.git              { background: #da4; }
+    a.svn              { background: #c44; }
 
     /* supported/unsupported flags */
     td.supported       { text-align: center; background: #dfd; color: #000; }
@@ -115,10 +116,21 @@
             var uses_git = (pkg.source_web_url.search(/github.com/) != -1);
             td = $('<td>')
                   .addClass('vcs')
-                  .addClass(uses_git ? 'git' : 'svn')
                   .append($('<a>').attr('href', pkg.source_web_url)
+                                  .addClass(uses_git ? 'git' : 'svn')
                                   .text(uses_git ? 'Git' : 'SVN'))
                   .appendTo(row);
+            if (pkg.svn_web_url && pkg.svn_web_url != pkg.source_web_url) {
+                td.append($('<a>').attr('href', pkg.svn_web_url)
+                                  .addClass('svn secondary')
+                                  .text('(svn)'));
+            }
+            if (pkg.github_web_url && pkg.github_web_url != pkg.source_web_url) {
+                td.append($('<a>').attr('href', pkg.github_web_url)
+                                  .addClass('git secondary')
+                                  .attr('title', 'empty Github repository')
+                                  .text('(git)'));
+            }
             // package version
             td = $('<td>')
                   .addClass('version')
