--- a/py3/index.html
+++ b/py3/index.html
@@ -7,6 +7,7 @@
   <style type="text/css">
     #support-table     { margin-left: -6em; }
     #support-table     { margin-bottom: 2em; table-layout: fixed; }
+    #support-table     { border-spacing: 1px; }
     #support-table th  { vertical-align: bottom; }
 
     .version-column    { min-width: 2em; }
@@ -18,7 +19,7 @@
 
     /* vcs column */
     td.vcs             { padding: 0; white-space: nowrap; text-align: center; }
-    td.vcs > a:link    { text-align: center; padding-left: 0.5em; padding-right: 0.5em; padding-top: 2px; padding-bottom: 2px; }
+    td.vcs > a:link    { text-align: center; padding-left: 0.5em; padding-right: 0.5em; padding-top: 2px; padding-bottom: 2px; margin-left: 1px; }
     td.vcs > a:link    { color: white; text-decoration: none; display: inline-block; }
     td.vcs > a:visited { color: #eee; }
     a.git              { background: #da4; }
