--- a/py3/index.html
+++ b/py3/index.html
@@ -114,23 +114,29 @@
                                       : pkg.name)
                   .appendTo(row);
             // package vcs
-            var uses_git = (pkg.source_web_url.search(/github.com/) != -1);
+            var uses_git = (pkg.github_web_url && (!pkg.svn_web_url || pkg.removed_from_svn));
+            var primary_url = uses_git ? pkg.github_web_url : pkg.svn_web_url;
             td = $('<td>')
                   .addClass('vcs')
-                  .append($('<a>').attr('href', pkg.source_web_url)
+                  .append($('<a>').attr('href', primary_url)
                                   .addClass(uses_git ? 'git' : 'svn')
                                   .text(uses_git ? 'Git' : 'SVN'))
                   .appendTo(row);
-            if (pkg.svn_web_url && pkg.svn_web_url != pkg.source_web_url) {
-                td.append($('<a>').attr('href', pkg.svn_web_url)
+            if (pkg.svn_web_url && pkg.svn_web_url != primary_url) {
+                var a = $('<a>').attr('href', pkg.svn_web_url)
                                   .addClass('svn secondary')
-                                  .text('(svn)'));
+                                  .text('(svn)');
+                if (pkg.removed_from_svn)
+                   a.attr('title', 'moved to Github');
+                td.append(a);
             }
-            if (pkg.github_web_url && pkg.github_web_url != pkg.source_web_url) {
-                td.append($('<a>').attr('href', pkg.github_web_url)
+            if (pkg.github_web_url && pkg.github_web_url != primary_url) {
+                var a = $('<a>').attr('href', pkg.github_web_url)
                                   .addClass('git secondary')
-                                  .attr('title', 'empty Github repository')
-                                  .text('(git)'));
+                                  .text('(git)');
+                if (pkg.empty_github_repo)
+                   a.attr('title', 'empty Github repository');
+                td.append(a);
             }
             // package version
             td = $('<td>')
