--- a/py3/index.html
+++ b/py3/index.html
@@ -5,6 +5,8 @@
   <title>zope.* on Python 3</title>
   <link rel="stylesheet" href="/style.css" />
   <style type="text/css">
+    #progress          { position: absolute; top: 2em; right: 2em; }
+
     #support-table     { margin-left: -6em; }
     #support-table     { margin-bottom: 2em; table-layout: fixed; }
     #support-table     { border-spacing: 1px; }
@@ -110,6 +112,7 @@
             return r;
         });
         var pypi_url = 'http://pypi.python.org/pypi/';
+        var count_py3 = 0, count_nopy3 = 0, count_unreleased = 0;
         $.each(data, function(idx, pkg) {
             var row = $('<tr>'), td;
             // package name
@@ -156,6 +159,9 @@
                   .addClass(pkg.supports_py3 ? 'supported' :
                             pkg.version ? 'unsupported' : 'unknown')
                   .appendTo(row);
+            if (pkg.supports_py3) count_py3 += 1;
+            else if (pkg.version) count_nopy3 += 1;
+            else count_unreleased += 1;
             // detailed python version support
             $.each(known_versions, function(idx, v) {
                 if (!v) {
@@ -218,11 +224,20 @@
         });
         var lastModified = jqXHR.getResponseHeader("Last-Modified");
         $("#last-modified").text("Currently shown dataset was computed on " + lastModified + ".");
+        var count_released = count_py3 + count_nopy3;
+        var progress = $("#progress")
+              .attr('value', count_py3)
+              .attr('max', count_released)
+              .attr('title', count_py3 + ' out of ' + count_released + ' packages ported')
+              .text(count_py3 + ' out of ' + count_released + ' packages ported')
+              .attr('style', null);
     });
   </script>
 </head>
 <body>
   <h1>Unofficial Zope on Python 3 status page</h1>
+
+  <progress id="progress" style="display: none"></progress>
 
   <table id="support-table">
     <tr>
