Don't resize rows as buildstatus images load.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1480 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -52,6 +52,7 @@
 
     /* build status column */
     td.buildstatus                    { padding-top: 0; padding-bottom: 0; }
+    td.buildstatus img                { vertical-align: middle; }
 
     /* highlight on hover */
     tbody > tr:hover   { background: #ffd; }
