Style the progress bar.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1491 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -18,6 +18,12 @@
     .prefer-svg a.png  { display: none !important; }
     .prefer-png a.svg  { display: none !important; }
 
+    /* progress bar */
+    progress           { border: 1px solid white; background: #fdd; }
+    progress::-webkit-progress-bar   { background: #fdd; }
+    progress::-webkit-progress-value { background: #dfd; }
+    progress::-moz-progress-bar      { background: #dfd; }
+
     /* version column */
     td.version         { text-align: center; white-space: nowrap; }
     td.unreleased      { color: #eee; }
