--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: #666;
     }
   </style>
+  <!--
   <script type="text/javascript" src="jquery/jquery.min.js"></script>
   <script type="text/javascript">
     $(function() {
@@ -57,6 +58,7 @@
         });
     });
   </script>
+  -->
 </head>
 <body>
   <h1>Zope 3 related odds and ends</h1>
@@ -66,22 +68,23 @@
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
   <p><a href="trac/">Source repository browser of svn.zope.org</a> (updated every 5 minutes)</p>
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
-  <p><a href="buildbot/">Buildbot for the Zope 3.4 Known Good Set packages</a></p>
+  <p><a href="buildbot/"><del>Buildbot for the Zope 3.4 Known Good Set packages</del></a> (no longer online)</p>
+  <!--
   <table class="buildbot-status">
     <tr>
       <th>&nbsp;</th>
-  <!--<th title="Ubuntu 8.04 LTS (Hardy Heron)">32-bit Linux</th>-->
-  <!--<th title="the buildslave machine died"><del>32-bit Linux</del></th>-->
+      <th title="Ubuntu 8.04 LTS (Hardy Heron)">32-bit Linux</th>
+      <th title="the buildslave machine died"><del>32-bit Linux</del></th>
       <th title="Ubuntu 10.04 LTS (Lucid Lynx)">64-bit Linux</th>
     </tr>
     <tr>
       <th>Python 2.4</th>
-  <!--<td id="py2.4-32bit-linux">
+      <td id="py2.4-32bit-linux">
         <span id="py2.4-32bit-linux-status"></span>
         <a id="py2.4-32bit-linux-summary" href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/summary">summary</a>
         <span class="sep">/</span>
         <a id="py2.4-32bit-linux-log" href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/stdio">full log</a>
-      </td>-->
+      </td>
       <td id="py2.4-64bit-linux">
         <span id="py2.4-64bit-linux-status"></span>
         <a id="py2.4-64bit-linux-summary" href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/summary">summary</a>
@@ -91,12 +94,12 @@
     </tr>
     <tr>
       <th>Python 2.5</th>
-  <!--<td id="py2.5-32bit-linux">
+      <td id="py2.5-32bit-linux">
         <span id="py2.5-32bit-linux-status"></span>
         <a id="py2.5-32bit-linux-summary" href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/summary">summary</a>
         <span class="sep">/</span>
         <a id="py2.5-32bit-linux-log" href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/stdio">full log</a>
-      </td>-->
+      </td>
       <td id="py2.5-64bit-linux">
         <span id="py2.5-64bit-linux-status"></span>
         <a id="py2.5-64bit-linux-summary" href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/summary">summary</a>
@@ -105,6 +108,7 @@
       </td>
     </tr>
   </table>
+  -->
 
   <div class="footer"> 
     Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
