Try http://zope3.pov.lt/py3/travis.html?filter=zope
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1973 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -137,7 +137,16 @@
         });
         var pypi_url = 'https://pypi.python.org/pypi/';
         var count_py3 = 0, count_nopy3 = 0, count_unreleased = 0;
+        var filter = null;
+        $.each(location.search.slice(1).split(';'), function(idx, arg) {
+            arg = arg.split('=')
+            if (arg[0] == 'filter') {
+                filter = arg[1];
+            }
+        });
         $.each(data, function(idx, pkg) {
+            if (filter && pkg.name.slice(0, filter.length) != filter)
+                return;
             var row = $('<tr>'), td;
             // package name
             td = $('<td>')
