--- a/py3/travis.html
+++ b/py3/travis.html
@@ -91,8 +91,19 @@
             return r;
         });
         var pypi_url = 'https://pypi.python.org/pypi/';
-        var count_py3 = 0, count_nopy3 = 0, count_unreleased = 0;
+        var filter = null;
+        $.each(location.search.slice(1).split(';'), function(idx, arg) {
+            arg = arg.split('=')
+            if (arg[0] == 'filter') {
+                filter = arg[1];
+            }
+        });
         $.each(data, function(idx, pkg) {
+            if (filter && pkg.name.slice(0, filter.length) != filter)
+                return;
+            var uses_git = (pkg.github_web_url && (!pkg.svn_web_url || pkg.removed_from_svn));
+            if (!uses_git)
+                return;
             var row = $('<tr>'), td;
             // package name
             td = $('<td>')
@@ -100,9 +111,6 @@
                                       : pkg.name)
                   .appendTo(row);
             // package vcs
-            var uses_git = (pkg.github_web_url && (!pkg.svn_web_url || pkg.removed_from_svn));
-            if (!uses_git)
-                return;
             var primary_url = uses_git ? pkg.github_web_url : pkg.svn_web_url;
             td = $('<td>')
                   .addClass('vcs')
@@ -122,9 +130,6 @@
                   .addClass(pkg.supports_py3 ? 'supported' :
                             pkg.version ? 'unsupported' : 'unknown')
                   .appendTo(row);
-            if (pkg.supports_py3) count_py3 += 1;
-            else if (pkg.version) count_nopy3 += 1;
-            else count_unreleased += 1;
             // detailed python version support
             $.each(known_versions, function(idx, v) {
                 if (!v) {
