--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <p><a href="irclogs-zope/">IRC logs of #zope on FreeNode</a></p>
   <p><a href="irclogs-zodb/">IRC logs of #zodb on FreeNode</a></p>
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
-  <p><a href="trac/">Source repository browser of svn.zope.org</a> (updated every 5 minutes)</p>
+  <p><a href="trac/">Source repository browser of svn.zope.org</a> (snapshot up to revision 130530)</p>
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
   <p><a href="buildbot/"><del>Buildbot for the Zope 3.4 Known Good Set packages</del></a> (no longer online)</p>
   <!--
